Remove category missing

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     },
     "categories": [
         "Other",
-        "Snippets",
-        "Productivity"
+        "Snippets"
     ],
     "activationEvents": [
         "*"
