--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
         "decrypt"
     ],
     "engines": {
-        "vscode": "^1.5.0"
+        "vscode": "^1.20.0"
     },
     "categories": [
-        "Other",
-        "Snippets"
+        "Other"
     ],
     "activationEvents": [
         "*"
@@ -43,6 +42,10 @@
             {
                 "title": "SecretLens: Set password",
                 "command": "secretlens.setPassword"
+            },
+            {
+                "title": "SecretLens: Copy secret",
+                "command": "secretlens.copySecret"
             }
         ],
         "keybindings": [
@@ -57,6 +60,10 @@
             {
                 "command": "secretlens.setPassword",
                 "key": "ctrl+l ctrl+p"
+            },
+            {
+                "command": "secretlens.copySecret",
+                "key": "ctrl+l ctrl+c"
             }
         ],
         "configuration": {
@@ -80,15 +87,20 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6",
         "mocha": "^2.3.3",
         "@types/node": "^6.0.40",
         "@types/mocha": "^2.2.32"
+    },
+    "dependencies": {
+        "copy-paste": "^1.3.0"
     }
 }
