--- a/package.json
+++ b/package.json
@@ -101,6 +101,6 @@
         "@types/mocha": "^2.2.32"
     },
     "dependencies": {
-        "copy-paste": "^1.3.0"
+        "clipboardy": "^1.2.3"
     }
 }
