--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "secretlens",
     "displayName": "SecretLens",
     "description": "Show a codelens decrypting a secret in the document",
-    "version": "1.5.0",
+    "version": "1.4.0",
     "icon": "resources/icon.png",
     "publisher": "fcrespo82",
     "homepage": "https://github.com/fcrespo82/vscode-secretlens",
@@ -98,7 +98,8 @@
                     "default": [
                         "*"
                     ]
-                },"secretlens.copySeparator": {
+                },
+                "secretlens.copySeparator": {
                     "title": "Copy separator",
                     "description": "Separator for when copying multiple secrets",
                     "type": "string",
