--- a/package.json
+++ b/package.json
@@ -103,13 +103,19 @@
                     "title": "Token",
                     "description": "Token for identifying the encrypted text",
                     "type": "string",
-                    "default": "secretlens"
+                    "default": "secretlens:"
+                },
+                "secretlens.endToken": {
+                    "title": "End Token",
+                    "description": "End token for identifying the encrypted text. Defaults to same as token",
+                    "type": "string",
+                    "default": null
                 },
                 "secretlens.excludeEnd": {
                     "title": "Exclude end fence",
                     "description": "Should the end fence be excluded when encrypting texts",
                     "type": "boolean",
-                    "default": false
+                    "default": true
                 },
                 "secretlens.languages": {
                     "title": "Language identifiers",
