Basic file encryption/decryption
fix not encrypting

Webpack configuration
Enable encrypt/decrypt entire dirs

remove gvdesign icon from deploy

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -11,3 +11,10 @@ vsc-extension-quickstart.md
 **/*.vsix
 scripts/**
 vsix_packages
+.vscode
+node_modules
+out/
+src/
+tsconfig.json
+webpack.config.js
+**/*.gvdesign
