Adopt no reload on install by updating vscode engine

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,9 @@
         {
             "type": "npm",
             "script": "watch",
-            "problemMatcher": [ "$ts-webpack" ],
+            "problemMatcher": [
+                "$ts-webpack"
+            ],
             "isBackground": true,
             "presentation": {
                 "reveal": "never"
