--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "decrypt"
     ],
     "engines": {
-        "vscode": "^1.22.0"
+        "vscode": "^1.34.0"
     },
     "categories": [
         "Other"
@@ -195,7 +195,8 @@
         "compile": "webpack --mode none",
         "watch": "webpack --mode none --watch",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "npm run compile && node ./node_modules/vscode/bin/test",
+        "test-compile": "tsc -p ./"
     },
     "devDependencies": {
         "@types/clipboardy": "^1.1.0",
