--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "npm",
             "script": "watch",
             "problemMatcher": [
-                "$ts-webpack"
+                "$ts-webpack-watch"
             ],
             "isBackground": true,
             "presentation": {
