--- a/package.json
+++ b/package.json
@@ -216,6 +216,7 @@
         "ts-loader": "^6.0.0",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
+        "vsce": "^1.81.1",
         "vscode": "^1.1.34",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.6"
