--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "activationEvents": [
         "*"
     ],
-    "main": "./dist/extension",
+    "main": "./out/extension.js",
     "contributes": {
         "menus": {
             "explorer/context": [
@@ -201,27 +201,27 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "webpack --mode production",
-        "compile": "webpack --mode none",
-        "watch": "webpack --mode none --watch --info-verbosity verbose",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test",
-        "test-compile": "tsc -p ./"
+        "vscode:prepublish": "npm run -S esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run -S esbuild-base -- --sourcemap",
+        "watch": "npm run -S esbuild-base -- --sourcemap --watch",
+        "test-compile": "tsc -p ./",
+        "lint": "eslint .",
+        "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/clipboardy": "^2.0.1",
-        "@types/mocha": "^2.2.32",
-        "@types/node": "^6.14.6",
+        "@types/mocha": "^5.2.0",
+        "@types/node": "^14.17.27",
+        "@types/vscode": "^1.34.0",
+        "@vscode/test-electron": "^1.6.2",
+        "esbuild": "^0.13.8",
+        "glob": "^7.1.2",
         "mocha": "^5.2.0",
-        "ts-loader": "^6.0.0",
         "tslint": "^5.16.0",
-        "typescript": "^3.4.5",
-        "vsce": "^1.81.1",
-        "vscode": "^1.1.34",
-        "webpack": "^4.41.6",
-        "webpack-cli": "^3.3.6"
+        "typescript": "^4.4.4",
+        "vsce": "^1.100.1"
     },
     "dependencies": {
-        "clipboardy": "^2.1.0"
+        "clipboardy": "^3.0.0"
     }
 }
